--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -397,9 +397,9 @@
         Continue with Google
       </button>
 
-      <div class="bottom-link">
-        Already have an account? <a href="/log-in">Login In</a>
-      </div>
+<div class="bottom-link">
+  Already have an account? <a href="/auth/log-in">Login In</a>
+</div>
     </div>
 </body>
 </html>
