--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -98,7 +98,7 @@
             <li><a href="/about-us">About Us</a></li>
             <li><a href="/blogs/blogs">Blogs</a></li>
             <li><a href="/blogs/add-blog">Write</a></li>
-            <li><a href="/log-in">Log In</a></li>
+            <li><a href="/auth/log-in">Log In</a></li>
             <li><a href="/sign-up" class="getstarted-btn">Get Started</a></li>
         </ul>
     </div>
