--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -49,7 +49,7 @@
                     {% if user.is_authenticated %}
                     <li class="profile-container">
                 <a href="javascript:void(0);" class="profile-link">
-                    <img src=" {{ user.profile.profile_image.url }}" alt="Profile Image" class="profile-image" />
+                    <img src=" {{ user.profile.profile_image.url|default:'/media/users/default_user.png' }}" alt="Profile Image" class="profile-image" />
                 </a>
                 <div class="profile-dropdown" id="profileDropdown" style=" max-width= 11rem; margin-right:-55%;" >
                     <button class="close-dropdown" id="closeDropdown">&times;</button>
