--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/static/css/home.css" />
 </head>
 <body>
-  {% include "header.html" %}
+  {% include "layout/header.html" %}
   <div class="container">
     <!-- sidebarbody -->
     <aside class="sidebarbody">
