--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -31,10 +31,16 @@
         <div class="input-group">
           <label for="email">Username</label>
           <input type="text" id="email" name="username" placeholder="Your UserName" required />
+          {% if errors.username %}
+          <div class="error-text">{{ errors.username }}</div>
+          {% endif %}
         </div>
       <div class="input-group">
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="Password" required />
+        {% if errors.password %}
+        <div class="error-text">{{ errors.password }}</div>
+        {% endif %}
       </div>
       <button class="login-btn" type="submit">Sign in</button>
     </form>
