--- a/templates/pages/bloglist.html
+++ b/templates/pages/bloglist.html
@@ -20,7 +20,18 @@
     <div class="blog-list-container">
         <h1>Blog List</h1>
         <hr />
-        <div id="blogList"></div>
+        <div id="blogList">
+
+    {% for blog in pending_blogs %}
+            <li>
+                <strong>{{ blog.title }}</strong> by {{ blog.author.username }}
+                <a href="{% url 'approveBlog' blog.id %}">Approve</a>
+            </li>
+        {% empty %}
+            <li>No pending blogs.</li>
+    {% endfor %}
+
+        </div>
     </div>
     <script src="/static/js/bloglist.js"></script>
 </body>
