--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -25,7 +25,7 @@
 
     <!-- Main Content -->
     <main class="content">
-      <h1>Welcome, Sandhya Timsina</h1>
+      <h1>Welcome, {{user.username}}</h1>
 
       <!-- Top Blogs -->
       <div class="section-wrapper">
