--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -7,6 +7,7 @@
     <title>Header</title>
     <link rel="stylesheet" href="/static/css/header.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     
 </head>
 <body>
@@ -59,7 +60,7 @@
                             </button>
                         </li>
                         <li>
-                            <button class="dropdown-button-profile" onclick="window.location.href='/blogs/blogs'">
+                            <button class="dropdown-button-profile" onclick="window.location.href='/blogs/view-blogs'">
                                 My Blogs
                                 <i class="fas fa-book"></i> 
                             </button>
