--- a/templates/pages/blogs/blogdetails.html
+++ b/templates/pages/blogs/blogdetails.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Digital Pathshala | Educational Articles & Insights</title>
     <link rel="stylesheet" href="/static/css/blogdetails.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
 
