--- a/templates/pages/blogs/blogdetails.html
+++ b/templates/pages/blogs/blogdetails.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/blogdetails.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
 
     {% include 'layout/header.html' %}
@@ -72,11 +73,12 @@
                     <a href="{% url 'edit_blogPage' blogs.id %}" class="edit-link">
                      <i class="fas fa-edit" style="color:#333;" >Edit</i>
                     </a>
+                    {%endif%}
                     <div>
                     {{blogs.content|safe}}
                     </div>
                     
-              {%endif%}
+              
                     {% comment %} <!-- Tags Section -->
                     <div class="tags-section">
                         <h3 class="tags-title">
@@ -103,7 +105,7 @@
     </div>
 
     <div class="related-blogs-grid">
-        {% for blog in blog %}
+        {% for blog in recent_blog %}
         <article class="blog-card">
             <div class="blog-image">
                 <img src="{{ blog.image.url }}" alt="{{ blog.title }}" class="blog-img">
@@ -128,4 +130,5 @@
         </div>
     </div>
 </body>
+
 </html>
