--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -100,7 +100,7 @@
             <li><a href="/sign-up" class="getstarted-btn">Get Started</a></li>
         </ul>
     </div>
-{% if messages %}
+{# {% if messages %}
   <div class="profile-msg-container">
     {% for message in messages %}
       <div class="profile-alert alert-{{ message.tags }}">
@@ -108,7 +108,7 @@
       </div>
     {% endfor %}
   </div>
-{% endif %}
+{% endif %} #}
 
     <div class="overlay"></div>
 
