--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="/static/css/login.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
-{% include "layout/header.html" %}
 
 <body>
   <div class="container">
@@ -31,10 +30,16 @@
         <div class="input-group">
           <label for="email">Username</label>
           <input type="text" id="email" name="username" placeholder="Your UserName" required />
+          {% if errors.username %}
+          <div class="error-text">{{ errors.username }}</div>
+          {% endif %}
         </div>
       <div class="input-group">
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="Password" required />
+        {% if errors.password %}
+        <div class="error-text">{{ errors.password }}</div>
+        {% endif %}
       </div>
       <button class="login-btn" type="submit">Sign in</button>
     </form>
