--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -7,7 +7,7 @@
     <title>Header</title>
     <link rel="stylesheet" href="/static/css/header.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
+    <link rel="shortcut icon" href="/static/assets/favicon.ico" type="image/x-icon">
     
 </head>
 <body>
