--- a/templates/pages/blogs/add-blog.html
+++ b/templates/pages/blogs/add-blog.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Blog Page</title>
+    <title>Write Blog | Digital Pathshala</title>
     <link rel="stylesheet" href="/static/css/add-blog.css" />
     <link rel="shortcut icon" href="/static/assets/favicon.ico" type="image/x-icon">
 </head>
