--- a/templates/pages/blogs/blogdetails.html
+++ b/templates/pages/blogs/blogdetails.html
@@ -69,7 +69,7 @@
                         
                         
                     </div>
-                    {% if blogs.author == user %}
+                    {% if blogs.author == user or request.user.is_staff %}
                     <a href="{% url 'edit_blogPage' blogs.id %}" class="edit-link">
                      <i class="fas fa-edit" style="color:#333;" >Edit</i>
                     </a>
