--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -27,7 +27,10 @@
                 </h3>
             </div>
             <div class="search-btn">
-                <input type="search" placeholder="Search" />
+                <form action="{% url 'blogs' %}" method="get">
+    <input type="text" name="q" placeholder="Search blogs..." required>
+    <button type="submit" style="display:none;" >Search</button>
+</form>
             </div>
         </div>
         <div class="secondsection">
