made forget password functionality

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -105,7 +105,9 @@
 
     <!-- End for Header -->
 
-   
+{% block content %}
+
+{% endblock %}
 <script>
     document.addEventListener('DOMContentLoaded', function() {
     const hamburger = document.querySelector('.hamburger');
