--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -47,7 +47,7 @@
     </form>
 
     <div class="forgot-row">
-      <a href="#" class="forgot-link">Forgot password?</a>
+      <a href="{% url 'password_reset' %}" class="forgot-link">Forgot password?</a>
     </div>
 
     <div class="divider">
