Update Edit and delete button

--- a/static/css/blogdetails.css
+++ b/static/css/blogdetails.css
@@ -146,7 +146,11 @@ body {
     align-items: center;
     gap: 0.5rem;
 }
-
+.edit-delete{
+    display: flex;
+    align-items: center;
+    justify-items: flex-start;
+}
 /* Featured Image */
 .featured-image-container {
     position: relative;
